[tool.poetry]
name = "fx"
version = "0.1.0"
description = "."
authors = ["Sam Atkins <samatkins@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
mypy = "^0.740.0"
pylint = "^2.4"
pytest-cov = "^2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
